--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+transformers
 beautifulsoup4
 psycopg
 PyYAML
@@ -11,8 +12,8 @@ jupyterlab
 rdflib
 pyvis
 streamlit
-spacy[transformers]
-spacy-streamlit
 scikit-learn
 statsmodels
 sqlparse
+spacy-streamlit
+torchmetrics
