--- a/setting_files/train_settings.yml
+++ b/setting_files/train_settings.yml
@@ -2,6 +2,8 @@ stage: 'train'
 model_path: 'bert-base-uncased'
 data_file: 'all_data_splitted.pickle'
 ids_file: 'all_data_ids.pickle'
+num_workers: 1
+test_size: 0.1
 max_len: 64
 lr: 0.001
 batch_size: 64
@@ -10,4 +12,6 @@ save_top_k: 2
 refresh_rate: 20
 n_gpus: 1
 n_epochs: 3
-num_sanity_val_steps: 2
+num_sanity_val_steps: 0
+
+seed: 777
