--- a/setting_files/train_settings.yml
+++ b/setting_files/train_settings.yml
@@ -6,7 +6,7 @@ test_file: 'all_data_test.jsonl'
 labels_file: 'labels.json'
 num_workers: 0
 max_len: 256
-lr: 0.001
+lr: 0.01
 batch_size: 64
 exp_name: 'nlu'
 save_top_k: 2
@@ -15,3 +15,5 @@ n_gpus: 1
 n_epochs: 10
 num_sanity_val_steps: 0
 seed: 777
+weight_decay_rate: 0.00001
+loss_type: 'focal' # focal / ce
