--- a/setting_files/eval_settings.yml
+++ b/setting_files/eval_settings.yml
@@ -11,13 +11,20 @@ data_module:
   batch_size: 64
 
 model:
-  stage: 'train'
+  stage: 'eval'
   model_path: 'bert-base-uncased'
-  lr: 0.001
+  lr: 0  # set to 0 if use CosineAnnealingWarmUpRestarts
   weight_decay_rate: 0.00001
   loss_type: 'focal' # focal / ce
-  focal_alpha: 1
-  focal_gamma: 300
+  focal:
+    alpha: 1
+    gamma: 300
+  schedular:
+    T_0: 3
+    T_up: 1
+    T_mult: 1
+    eta_max: 0.01
+    gamma: 0.75
 
 trainer:
   save_top_k: 2
