--- a/setting_files/eval_settings.yml
+++ b/setting_files/eval_settings.yml
@@ -1,11 +1,11 @@
-exp_name: 'nlu_final'
+exp_name: 'nlu_data2'
 seed: 777
 data_module:
   
-  train_file: 'all_data_train.jsonl'
-  valid_file: 'all_data_valid.jsonl'
-  test_file: 'all_data_test.jsonl'
-  labels_file: 'labels.json'
+  train_file: 'all_data_train2.jsonl'
+  valid_file: 'all_data_valid2.jsonl'
+  test_file: 'all_data_test2.jsonl'
+  labels_file: 'labels2.json'
   num_workers: 0
   max_len: 256
   batch_size: 64
