--- a/setting_files/train_settings.yml
+++ b/setting_files/train_settings.yml
@@ -1,9 +1,9 @@
 exp_name: 'nlu_simple'
 seed: 777
 data_module:  
-  train_file: 'all_data_train_simple.jsonl'
-  valid_file: 'all_data_valid_simple.jsonl'
-  test_file: 'all_data_test_simple.jsonl'
+  train_file: 'all_data_test_simple_l7_tk3_3.jsonl'
+  valid_file: 'all_data_valid_simple_l7_tk3_3.jsonl'
+  test_file: 'all_data_test_simple_l7_tk3_3.jsonl'
   labels_file: 'labels_simple.json'
   num_workers: 0
   max_len: 256
@@ -12,7 +12,7 @@ data_module:
 model:
   stage: 'train'
   model_path: 'bert-base-uncased'
-  weight: 'all_data_count.json'
+  weight_file: 'all_data_count_l7_tk3_3.json'
   lr: 0  # set to 0 if use CosineAnnealingWarmUpRestarts
   weight_decay_rate: 0.00001
   loss_type: 'focal' # focal / ce
