--- a/setting_files/train_settings.yml
+++ b/setting_files/train_settings.yml
@@ -36,3 +36,4 @@ trainer:
   strategy: 'ddp_spawn'  #  dp | ddp | ddp2 | ddp_spawn
   log_every_n_steps: 25
   deterministic: false
+  gradient_clip_val: 0.0
